<resources>
    // Home

    <string name="app_name">CalcGenius</string>
    <string name="basic_calculator">Basic calculator</string>
    <string name="scientific_calculator">Scientific calculator</string>
    <string name="About">About</string>
    <string name="Exit">Exit</string>

    // Basic Calculator

    <string name="ac">AC</string>
    <string name="c_ce">C</string>
    <string name="plus_minus">+/-</string>
    <string name="divide">÷</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="multiply">x</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="minus">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="plus">+</string>
    <string name="_0">0</string>
    <string name="dot">,</string>
    <string name="equals">=</string>
    <string name="start_zero">0</string>
    <string name="about_app_description">This app was made by Bartosz Chadryś on mobile technology course.</string>
    <string name="back"><![CDATA[<]]> home</string>
    <string name="log">log</string>
    <string name="ln">ln</string>
    <string name="percent">%</string>
    <string name="x_double">x²</string>
    <string name="x_n">xⁿ</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="sqrt">√</string>

    // Scientific Calculator

</resources>