<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context=".ScientificCalculatorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:background="@color/black">

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:backgroundTint="@color/darkGray"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="18dp">
        </Button>

        <TextView
            android:id="@+id/tvResults"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:textAlignment="viewEnd"
            android:gravity="bottom"
            android:paddingEnd="10dp"
            android:paddingBottom="30dp"
            android:text="@string/start_zero"
            android:textSize="50sp"
            android:lines="1"
            android:maxLength="12"
            tools:ignore="RtlCompat">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/buttonsLayoutMargin"
            android:layout_weight="1"
            tools:ignore="NestedWeights">

            <Button
                android:id="@+id/log"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_margin="@dimen/buttonMargin"
                android:textSize="14sp"
                android:backgroundTint="@color/darkGrayTransparent"
                android:textColor="@color/white"
                android:text="log"/>

            <Button
                android:id="@+id/ln"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="@dimen/buttonMargin"
                android:textSize="20sp"
                android:backgroundTint="@color/darkGrayTransparent"
                android:textColor="@color/white"
                android:text="ln"/>

            <Button
                android:id="@+id/percent"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="@dimen/buttonMargin"
                android:textSize="20sp"
                android:backgroundTint="@color/darkGrayTransparent"
                android:textColor="@color/white"
                android:text="%"/>

            <Button
                android:id="@+id/powerDouble"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="@dimen/buttonMargin"
                android:textSize="20sp"
                android:backgroundTint="@color/darkGrayTransparent"
                android:textColor="@color/white"
                android:text="x²"/>

            <Button
                android:id="@+id/powerY"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="@dimen/buttonMargin"
                android:textSize="20sp"
                android:backgroundTint="@color/darkGrayTransparent"
                android:textColor="@color/white"
                android:text="xⁿ"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/buttonsLayoutMargin"
            android:layout_weight="1"
            tools:ignore="NestedWeights">

            <Button
                android:id="@+id/sin"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_margin="@dimen/buttonMargin"
                android:textSize="@dimen/buttonTextSize"
                android:backgroundTint="@color/darkGrayTransparent"
                android:textColor="@color/white"
                android:text="sin"/>

            <Button
                android:id="@+id/cos"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="@dimen/buttonMargin"
                android:textSize="24sp"
                android:backgroundTint="@color/darkGrayTransparent"
                android:textColor="@color/white"
                android:text="cos"/>

            <Button
                android:id="@+id/tan"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="@dimen/buttonMargin"
                android:textSize="@dimen/buttonTextSize"
                android:backgroundTint="@color/darkGrayTransparent"
                android:textColor="@color/white"
                android:text="tan"/>

            <Button
                android:id="@+id/sqrt"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="@dimen/buttonMargin"
                android:textSize="@dimen/buttonTextSize"
                android:backgroundTint="@color/darkGrayTransparent"
                android:textColor="@color/white"
                android:text="√"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/buttonsLayoutMargin"
            android:layout_weight="1"
            tools:ignore="NestedWeights">

            <Button
                android:id="@+id/allClear"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_margin="@dimen/buttonMargin"
                android:textSize="@dimen/buttonTextSize"
                android:backgroundTint="@color/gray"
                android:textColor="@color/black"
                android:text="@string/ac"/>

            <Button
                android:id="@+id/clear"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="@dimen/buttonMargin"
                android:textSize="@dimen/buttonTextSize"
                android:backgroundTint="@color/gray"
                android:textColor="@color/black"
                android:text="@string/c_ce"/>

            <Button
                android:id="@+id/plusMinus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="@dimen/buttonMargin"
                android:textSize="@dimen/buttonTextSize"
                android:backgroundTint="@color/gray"
                android:textColor="@color/black"
                android:text="@string/plus_minus"/>

            <Button
                android:id="@+id/divide"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="@dimen/buttonMargin"
                android:textSize="@dimen/buttonTextSize"
                android:backgroundTint="@color/orange"
                android:textColor="@color/white"
                android:text="@string/divide"/>

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/buttonsLayoutMargin"
            android:layout_weight="1"
            tools:ignore="NestedWeights">

            <Button
                android:id="@+id/seven"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_margin="@dimen/buttonMargin"
                android:textSize="@dimen/buttonTextSize"
                android:backgroundTint="@color/darkGray"
                android:textColor="@color/white"
                android:text="@string/_7"/>

            <Button
                android:id="@+id/eight"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="@dimen/buttonMargin"
                android:textSize="@dimen/buttonTextSize"
                android:backgroundTint="@color/darkGray"
                android:textColor="@color/white"
                android:text="@string/_8"/>

            <Button
                android:id="@+id/nine"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="@dimen/buttonMargin"
                android:textSize="@dimen/buttonTextSize"
                android:backgroundTint="@color/darkGray"
                android:textColor="@color/white"
                android:text="@string/_9"/>

            <Button
                android:id="@+id/multiply"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="@dimen/buttonMargin"
                android:textSize="@dimen/buttonTextSize"
                android:backgroundTint="@color/orange"
                android:textColor="@color/white"
                android:text="@string/multiply"/>

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/buttonsLayoutMargin"
            android:layout_weight="1"
            tools:ignore="NestedWeights">

            <Button
                android:id="@+id/four"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_margin="@dimen/buttonMargin"
                android:textSize="@dimen/buttonTextSize"
                android:backgroundTint="@color/darkGray"
                android:textColor="@color/white"
                android:text="@string/_4"/>

            <Button
                android:id="@+id/five"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="@dimen/buttonMargin"
                android:textSize="@dimen/buttonTextSize"
                android:backgroundTint="@color/darkGray"
                android:textColor="@color/white"
                android:text="@string/_5"/>

            <Button
                android:id="@+id/six"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="@dimen/buttonMargin"
                android:textSize="@dimen/buttonTextSize"
                android:backgroundTint="@color/darkGray"
                android:textColor="@color/white"
                android:text="@string/_6"/>

            <Button
                android:id="@+id/minus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="@dimen/buttonMargin"
                android:textSize="@dimen/buttonTextSize"
                android:backgroundTint="@color/orange"
                android:textColor="@color/white"
                android:text="@string/minus"/>

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/buttonsLayoutMargin"
            android:layout_weight="1"
            tools:ignore="NestedWeights">

            <Button
                android:id="@+id/one"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_margin="@dimen/buttonMargin"
                android:textSize="@dimen/buttonTextSize"
                android:backgroundTint="@color/darkGray"
                android:textColor="@color/white"
                android:text="@string/_1"/>

            <Button
                android:id="@+id/two"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="@dimen/buttonMargin"
                android:textSize="@dimen/buttonTextSize"
                android:backgroundTint="@color/darkGray"
                android:textColor="@color/white"
                android:text="@string/_2"/>

            <Button
                android:id="@+id/three"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="@dimen/buttonMargin"
                android:textSize="@dimen/buttonTextSize"
                android:backgroundTint="@color/darkGray"
                android:textColor="@color/white"
                android:text="@string/_3"/>

            <Button
                android:id="@+id/plus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="@dimen/buttonMargin"
                android:textSize="@dimen/buttonTextSize"
                android:backgroundTint="@color/orange"
                android:textColor="@color/white"
                android:text="@string/plus"/>

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/buttonsLayoutMargin"
            android:layout_weight="1"
            tools:ignore="NestedWeights">

            <Button
                android:id="@+id/zero"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_margin="@dimen/buttonMargin"
                android:textSize="@dimen/buttonTextSize"
                android:backgroundTint="@color/darkGray"
                android:textColor="@color/white"
                android:text="@string/_0"/>

            <Button
                android:id="@+id/dot"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="@dimen/buttonMargin"
                android:textSize="@dimen/buttonTextSize"
                android:backgroundTint="@color/darkGray"
                android:textColor="@color/white"
                android:text="@string/dot"/>

            <Button
                android:id="@+id/equals"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="@dimen/buttonMargin"
                android:textSize="@dimen/buttonTextSize"
                android:backgroundTint="@color/orange"
                android:textColor="@color/white"
                android:text="@string/equals"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>